# NoRELAX-cpp

./: CMakeLists.txt  NoRELAX.pro  README.md
norelax/: DenseMRF.cpp  DenseMRF.hpp  HMRF.cpp  HMRF.hpp  OpenGM.hpp  PairwiseMRF.cpp  PairwiseMRF.hpp  lemmas.cpp  lemmas.hpp  main.cpp  makeunique.hpp  outils_io.cpp  outils_io.hpp  projection.h  unittest.hpp
